code/WetlandMap_ArcGIS/GpMessages/83029638355600
<?xml version="1.0" encoding="utf-8"?><messages><msg code="0" type="2">Start Time: Friday, November 21, 2025 12:16:07 PM</msg><msg code="539" type="100">ERROR 000539: ﻿  File "&lt;expression&gt;", line 1
    IIf($feature.lyr_14C=="yes",1,0)
        ^
﻿SyntaxError: invalid syntax
</msg><msg code="-2147467259" type="100">Failed to execute (CalculateField).</msg><msg code="0" type="3">Failed at Friday, November 21, 2025 12:16:08 PM (Elapsed Time: 0.80 seconds)</msg></messages>